environments/gloo-gateway/gateway-api/live/bookinfo-app/base/bookinfo-delegate-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: productpage-api-v1
  namespace: bookinfo
spec:
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      # Route to the productpage service
      backendRefs:
        - name: productpage
          port: 9080
