environments/gloo-gateway/gateway-api/live/bookinfo-app/base/bookinfo-parent-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo-parent-route
  namespace: gloo-system
  labels:
    example: bookinfo-route
    gateway: https
spec:
  hostnames:
  - "bookinfo.ggv2.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: 'productpage-api-v1'
          namespace: bookinfo
          group: gateway.networking.k8s.io
          kind: HTTPRoute
      matches:
        - path:
            type: PathPrefix
            value: /api/bookinfo
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: bookinfo-route-policies
